# chatapp-client

./: .pre-commit-config.yaml  cliff.toml
src-tauri/: Cargo.toml
