[package]
name = "chatapp"
version = "0.1.0"
description = "Chat App"
authors = ["Yu Tian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chatapp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
config = { version = "0.15.4", default-features = false, features = ["yaml"] }
anyhow = "1.0.94"
arc-swap = "1.7.1"
dirs = "5.0.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-log = { version = "2.2.0", features = ["colored"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-window-state = "2.2.0"
tracing = { version = "0.1.41", features = ["log"] }

[profile.dev.package.objc2]
debug-assertions = false
